--- a/apps/storybook/src/stories/Introduction.mdx
+++ b/apps/storybook/src/stories/Introduction.mdx
@@ -13,6 +13,7 @@ Welcome to **ZenKit UI** - A modern React component library built on ZenKit CSS.
 - **Accessible** - WCAG 2.1 AA compliant components
 - **Customizable** - CSS Variables for easy theming
 - **Tree-shakeable** - Import only what you need
+- **100+ Components** - Comprehensive component library
 
 ## Installation
 
@@ -44,7 +45,28 @@ function App() {
 
 ### @zenkit-ui/core
 
-Core components like Button, Card, Input, Modal, etc.
+Core components including:
+
+**Layout & Structure**
+- AppShell, Container, Grid, Flex, Stack, Group, Box, Center, AspectRatio
+
+**Navigation**
+- Navbar, Sidebar, Breadcrumb, Menu, Tabs, Pagination, Steps, NavLink
+
+**Data Entry**
+- Input, Select, Checkbox, Radio, Switch, Slider, DatePicker, Upload, Form
+
+**Data Display**
+- Table, DataGrid, Card, Avatar, Badge, Tag, Timeline, Tree, Descriptions
+
+**Feedback**
+- Alert, Modal, Drawer, Toast, Notification, Progress, Skeleton, Spinner
+
+**Overlay**
+- Popover, Tooltip, Dropdown, Dialog, Sheet, Popconfirm
+
+**Utility**
+- Portal, Transition, ConfigProvider, FloatButton, Affix, VirtualList
 
 ### @zenkit-ui/hooks
 
@@ -56,13 +78,28 @@ Reusable React hooks for building accessible UI components:
 - `useControllable` - Controlled/uncontrolled component state
 - `useMediaQuery` - Responsive breakpoint detection
 - `useKeyboard` - Keyboard event handling
+- `useClipboard` - Copy to clipboard functionality
+- `useLocalStorage` - Persistent local storage state
+- `useDebounce` - Debounced value updates
+- `useIntersection` - Intersection observer hook
 
-## Component Status
+## Component Categories
 
-| Component | Status |
-|-----------|--------|
-| Button | ✅ Ready |
-| More... | 🚧 Coming Soon |
+| Category | Components |
+|----------|-----------|
+| Layout | AppShell, Container, Grid, Flex, Stack, Group, Box, Center |
+| Navigation | Navbar, Menu, Tabs, Breadcrumb, Pagination, Steps |
+| Forms | Input, Select, Checkbox, Radio, Switch, DatePicker, Form |
+| Data Display | Table, Card, Avatar, Badge, Tag, List, Tree |
+| Feedback | Alert, Modal, Toast, Progress, Spinner, Skeleton |
+| Overlay | Popover, Tooltip, Dropdown, Dialog, Drawer |
+
+## Browser Support
+
+- Chrome (latest)
+- Firefox (latest)
+- Safari (latest)
+- Edge (latest)
 
 ## Resources
 
